--- a/css/styles.css
+++ b/css/styles.css
@@ -6,3 +6,33 @@ font-family: 'Marck Script', cursive 400, 700;
   --font-text: "Caveat", cursive;
   --font-title: "Marck Script", cursive;
 }
+body {
+  background-color: bisque;
+}
+
+/* HOME BUTTON */
+.home-btn {
+  position: absolute;
+  top: 4vh;
+  left: 4vw;
+  display: block;
+
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background: #fff;
+  background-image: url(../img/dom-7.png);
+  background-size: contain;
+  background-color: lightgreen;
+}
+.home-btn:hover,
+.home-btn:focus {
+  box-shadow: 0 0 5px rgba(5, 255, 150, 0.5), 0 0 10px rgba(5, 255, 150, 0.4),
+    0 0 15px rgba(5, 255, 150, 0.3), 0 0 20px rgba(5, 255, 150, 0.2),
+    0 0 25px rgba(5, 255, 150, 0.1);
+  background-color: rgba(0, 255, 255, 0.5);
+}
+.home-btn:active {
+  background-image: url(../img/dom-5.png);
+}
+/* HOME BUTTON */
